# ecsfy

./: CMakeLists.txt  README.md
src/: Components.cpp  Main.cpp
src/ecsfy/: ComponentVector.hpp  CompositeStorage.hpp  CompositeVector.hpp  Entity.hpp  EntityManager.hpp  Registry.hpp  SlotMap.hpp  TypeTraits.hpp  World.hpp
tests/: CMakeLists.txt  ComponentVector.t.cpp  CompositeStorage.cpp  Entity.cpp  EntityManager.cpp  EntityTraits.hpp  Messenger.cpp  Messenger.h  Messenger.t.cpp  Profile.cpp  Registry.cpp  ScopedProfiler.cpp  ScopedProfiler.hpp  SlotMap.cpp  TypeTraits.cpp  World.cpp
